# tcg-boot

./: .gitignore  COPYING  Cargo.toml  Makefile  README.md  autogen.sh  build-vm.sh  configure.ac  install-img.sh  install-vm.sh  start-vm.sh
loader/: Cargo.toml
loader/src/: main.rs
src/: Makefile.am  config.c  config.h  config.rs  image.c  image.h  linux.c  linux.h  main.c  main.h  main.rs  page.c  page.h  path.c  path.h
src/arch/x86/: linux.c
src/boot/: mod.rs  x86_64.rs
src/efi/: README.md  alloc.rs  boot.rs  console.rs  debug.rs  device.rs  event.rs  fs.rs  image.rs  memory.rs  mod.rs  path.rs  proto.rs  status.rs  string.rs  system.rs
src/loader/: Makefile.am  config.c  config.h  image.h  link.sh  main.c  main.h  mkdisk.sh  path.c  path.h
src/loader/proto/: tpm.h
src/proto/: tpm.h
src/tcg-loader/: Makefile.am  config.c  config.h  default.conf  image.c  image.h  link.sh  linux.c  linux.h  main.c  main.h  mkdisk.sh  page.c  page.h  path.c  path.h
src/tcg-loader/arch/x86/: linux.c
src/tcg-loader/proto/: tpm.h
vm/: .gitignore  esp-part.sh  start.sh
vm/bios/: .gitignore
zfi/: COPYING  Cargo.toml
zfi/src/: allocator.rs  boot.rs  console.rs  debug.rs  filesystem.rs  image.rs  lib.rs  status.rs  system.rs
